Fix text alignment in CodeMirror styles

--- a/code-editor.css
+++ b/code-editor.css
@@ -14,7 +14,7 @@
 }
 
 .CodeMirror {
-	text-align: left;
+	text-align: left;25432543232543
 }
 
 .wrap .CodeMirror .CodeMirror-linenumber {
